# ICAPS-24

./: .gitignore  ICAPS_SummerSchool_Lab1.ipynb  ICAPS_SummerSchool_Lab3.ipynb  ICKEPS-info.md  LICENSE.txt  MANIFEST.in  PID_controller.py  README.md  _setup.cfg_  block_world.py  environment.yml  klampt_world.xml  mjmodel.xml  motion_planner.py  motion_planning_example.py  new_run.py  pyproject.toml  requirements.txt  scratch.py  setup.cfg  setup.py  table_world.py  ur5.urdf
block_world/: block_world.py  grasp_manager.py  object_manager.py
motion_planning/: configurations.py  klampt_world.xml  motion_executer.py  motion_planner.py
motion_planning/ur5_rob/: ur5.rob
mujoco_env/: __init__.py  milestones.py  mujoco_env.py  setup.cfg
mujoco_env/common/: __init__.py  math.py  metrics.py
mujoco_env/episode/: cfg_parsing.py  samplers.py
mujoco_env/rendering/: base_renderer.py
mujoco_env/simulation/: entity.py  simulator.py
n_table_blocks_world/: block_world.py  configurations_and_constants.py  grasp_manager.py  n_table_block_world_special.py  n_table_blocks_world.py  object_manager.py  physics_utils.py  utils.py
notebooks/: ICAPS_SummerSchool_Lab1.ipynb  ICAPS_SummerSchool_Lab2.ipynb  ICAPS_SummerSchool_Lab3.ipynb  ICAPS_SummerSchool_Lab4.ipynb
spear_env/: __init__.py  milestones.py  spear_env.py
spear_env/common/: assets.py  misc.py
spear_env/episode/: __init__.py  cfg_parsing.py  samplers.py
spear_env/rendering/: __init__.py  offscreen_renderer.py  window_renderer.py
tamp_helpers/: executers.py  pddl_to_mujoco.py  pred_utils.py  table_sampling.py
(+141 files in other folders)
