[metadata]
name = icaps24
version = 0.1.0

[options]
include_package_data = True
packages = find:
package_data =
    mujoco_env: assets/*
python_requires = >=3.9
install_requires =
    dm_control>=1.0.16
    gymnasium>=0.29.1
    Klampt>=0.9.1
    mujoco>=3.1.3
    numpy>=1.26.4
    PyYAML>=6.0.1
    scipy>=1.13.0